--- a/frontend/resources/main_menu.ui
+++ b/frontend/resources/main_menu.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>TimeZone</string>
+   <string>Esports Manager Manager</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="joinServerButton">
