--- a/frontend/resources/manager_menu.ui
+++ b/frontend/resources/manager_menu.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>TimeZone</string>
+   <string>Esports Manager Manager</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
@@ -153,12 +153,27 @@
       <x>260</x>
       <y>290</y>
       <width>661</width>
-      <height>192</height>
+      <height>281</height>
      </rect>
     </property>
     <property name="sortingEnabled">
      <bool>true</bool>
     </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+    <attribute name="horizontalHeaderVisible">
+     <bool>true</bool>
+    </attribute>
+    <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="verticalHeaderVisible">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="verticalHeaderShowSortIndicator" stdset="0">
+     <bool>true</bool>
+    </attribute>
     <column>
      <property name="text">
       <string>Place</string>
@@ -362,8 +377,8 @@
    <widget class="QPushButton" name="stopMicroManageButton">
     <property name="geometry">
      <rect>
-      <x>770</x>
-      <y>520</y>
+      <x>780</x>
+      <y>530</y>
       <width>151</width>
       <height>41</height>
      </rect>
