--- a/frontend/resources/settings_menu.ui
+++ b/frontend/resources/settings_menu.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>TimeZone - Settings</string>
+   <string>Settings - Esports Manager Manager</string>
   </property>
   <widget class="QWidget" name="centralwidget"/>
   <widget class="QMenuBar" name="menubar">
