--- a/frontend/resources/waiting_menu.ui
+++ b/frontend/resources/waiting_menu.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>TimeZone</string>
+   <string>Waiting - Esports Manager Manager</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTableWidget" name="otherUserTableWidget">
