--- a/frontend/resources/manager_menu.ui
+++ b/frontend/resources/manager_menu.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>946</width>
+    <width>908</width>
     <height>614</height>
    </rect>
   </property>
@@ -152,7 +152,7 @@
      <rect>
       <x>260</x>
       <y>290</y>
-      <width>661</width>
+      <width>611</width>
       <height>281</height>
      </rect>
     </property>
@@ -191,12 +191,17 @@
     </column>
     <column>
      <property name="text">
-      <string>ELO/MMR</string>
+      <string>Skill Rating</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Matches played</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Result history</string>
      </property>
     </column>
    </widget>
@@ -372,8 +377,8 @@
    <widget class="QPushButton" name="stopMicroManageButton">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>530</y>
+      <x>740</x>
+      <y>10</y>
       <width>151</width>
       <height>41</height>
      </rect>
@@ -401,7 +406,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>946</width>
+     <width>908</width>
      <height>21</height>
     </rect>
    </property>
