--- a/frontend/resources/manager_menu.ui
+++ b/frontend/resources/manager_menu.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>920</width>
-    <height>635</height>
+    <height>696</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -153,7 +153,7 @@
       <x>260</x>
       <y>290</y>
       <width>621</width>
-      <height>291</height>
+      <height>341</height>
      </rect>
     </property>
     <property name="sortingEnabled">
@@ -235,7 +235,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>280</y>
+      <y>320</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -248,7 +248,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>480</y>
+      <y>520</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -261,7 +261,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>360</y>
+      <y>400</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -274,7 +274,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>560</y>
+      <y>600</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -287,7 +287,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>520</y>
+      <y>560</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -300,7 +300,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>240</y>
+      <y>280</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -313,7 +313,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>320</y>
+      <y>360</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -326,7 +326,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>400</y>
+      <y>440</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -404,7 +404,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>440</y>
+      <y>480</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -430,6 +430,19 @@
     </property>
     <property name="defaultDropAction">
      <enum>Qt::IgnoreAction</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="analyzeMatchesButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>240</y>
+      <width>171</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Analyze own played matches</string>
     </property>
    </widget>
   </widget>
