Track skill separately for bot matches, ranked matches and tournament matches

--- a/frontend/resources/manager_menu.ui
+++ b/frontend/resources/manager_menu.ui
@@ -191,7 +191,7 @@
     </column>
     <column>
      <property name="text">
-      <string>Skill Rating</string>
+      <string>Performance</string>
      </property>
     </column>
     <column>
